bluegreen/green-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pcc-deployment-green
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pcc
        version: "1.11" #APPLICATION VERSION
    spec:
      containers: 
        - name: pcc
          image: nginxdemos/hello:0.2
          ports:
            - name: http
              containerPort: 80
