bluegreen/pcc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcc-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: pcc
    version:  "1.10"
